--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,4 @@
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,6 +8,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
   min-height: 100%;
+
 }
 
 #root {
@@ -24,6 +26,7 @@ a{
 
 * {
   box-sizing: inherit;
+  letter-spacing: 0.12rem;
 }
 
 code {
